# HERoEHS-ERICA-Motion

erica_action_editor/: CMakeLists.txt  package.xml
erica_action_editor/config/: config_mirror_joint.yaml
erica_action_editor/include/erica_action_editor/: action_editor.h
erica_action_editor/launch/: erica_action_editor.launch  erica_action_editor_gazebo.launch
erica_action_editor/src/: action_editor.cpp  main.cpp
erica_action_module/: CMakeLists.txt  package.xml
erica_action_module/include/erica_action_module/: action_file_define.h  action_module.h
erica_action_module/src/: action_module.cpp
erica_arm__module/: CMakeLists.txt  package.xml
erica_arm_module/: CMakeLists.txt  package.xml
erica_arm_module/include/erica_arm_module/: arm_module.h
erica_arm_module/src/: arm_module.cpp
erica_base_module/: CMakeLists.txt  package.xml
erica_base_module/data/: init_pose.yaml
erica_base_module/include/erica_base_module/: erica_base_module.h
erica_base_module/src/: erica_base_module.cpp
erica_head_module/: CMakeLists.txt  package.xml
erica_head_module/include/erica_head_module/: erica_head_module.h
erica_head_module/src/: erica_head_module.cpp
erica_kinematics_dynamics/: CMakeLists.txt  package.xml
erica_kinematics_dynamics/include/erica_kinematics_dynamics/: kinematics_dynamics.h  kinematics_dynamics_define.h  link_data.h
erica_kinematics_dynamics/src/: kinematics_dynamics.cpp  link_data.cpp
erica_manager/: CMakeLists.txt  package.xml
erica_manager/config/: dxl_init.yaml  erica.robot  offset.yaml
erica_manager/launch/: .erica_manager_gazebo.launch.launch.swp  erica_manager.launch  erica_manager_gazebo.launch
erica_manager/src/: erica_manager_node.cpp
erica_motion_module/: CMakeLists.txt  package.xml
