<?xml version="1.0"?>
<package format="2">
  <name>erica_kinematics_dynamics</name>
  <version>0.0.0</version>
  <description>The erica_kinematics_dynamics package</description>

  <maintainer email="jay@todo.todo">jay</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>cmake_modules</depend>
  <depend>robotis_math</depend>
  <depend>eigen</depend>

</package>
